--- a/angular.json
+++ b/angular.json
@@ -33,8 +33,7 @@
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.less",
-              "node_modules/@fortawesome/fontawesome-free/css/all.css",
-              "node_modules/ngx-toastr/toastr.css"
+              "node_modules/@fortawesome/fontawesome-free/css/all.css"
             ],
             "scripts": ["src/assets/js/fabric.js"]
           },
