--- a/package.json
+++ b/package.json
@@ -10,24 +10,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.1.2",
-    "@angular/cdk": "^12.2.5",
-    "@angular/common": "~12.1.2",
-    "@angular/compiler": "~12.1.2",
-    "@angular/core": "~12.1.2",
-    "@angular/forms": "~12.1.2",
-    "@angular/material": "^12.2.5",
-    "@angular/platform-browser": "~12.1.2",
-    "@angular/platform-browser-dynamic": "~12.1.2",
-    "@angular/router": "~12.1.2",
-    "@fortawesome/fontawesome-free": "^5.15.4",
-    "@fortawesome/fontawesome-svg-core": "^1.2.27",
-    "@ngneat/tailwind": "^7.0.3",
+    "@angular/animations": "^14.0.0",
+    "@angular/cdk": "14.2.2",
+    "@angular/common": "^14.0.0",
+    "@angular/compiler": "^14.0.0",
+    "@angular/core": "^14.0.0",
+    "@angular/forms": "^14.0.0",
+    "@angular/material": "^14.2.2",
+    "@angular/platform-browser": "^14.0.0",
+    "@angular/platform-browser-dynamic": "^14.0.0",
+    "@angular/router": "^14.0.0",
     "guid-typescript": "^1.0.9",
-    "ng-multiselect-dropdown": "^0.3.1",
-    "ngx-toastr": "^14.1.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.2.0",
+    "ngx-toastr": "^15.0.0",
+    "rxjs": "~7.5.0",
+    "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
